# homebank

./: .editorconfig  .gitignore  ChangeLog  Makefile.am  README  bootstrap  configure.ac
data/datas/: Makefile.am  example.xhb  hb-categories-hu.csv
data/icons/: Makefile.am
debian/: changelog  control  copyright
doc/: 00-intro.html  00-lexicon.html  00-whatsnew.html  Makefile.am  dlg-acco.html  dlg-arch.html  dlg-assi.html  dlg-bud1.html  dlg-cate.html  dlg-curr.html  dlg-filt.html  dlg-paye.html  dlg-pref.html  dlg-spli.html  dlg-tag.html  dlg-tran.html  dlg-wall.html  frm-main.html  frm-navig.html  help.css  index.html  menu-account.html  menu-main.html  misc-balance.html  misc-csvformat.html  misc-minor.html  misc-reconcile.html  use-auto_addition.html  use-auto_assign.html  use-budget.html  use-import.html  use-lend-refund.html  use-tipsandtricks.html  use-vehiclecost.html  win-account.html  win-balance.html  win-budget.html  win-main.html  win-statistics.html  win-trendtime.html  (+1 more)
doc/images/: Makefile.am
maint/: import_upstream.sh
plugins/: Makefile.am  hello.pl  native.c  transfer-matcher.pl
po/: POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  br.po  ca.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mr.po  ms.po  nb.po  (+19 more)
src/: HomeBank.pm  Makefile.am  dsp-account.c  dsp-account.h  dsp-mainwindow.c  dsp-mainwindow.h  dsp_mainwindow.c  enums.h  ext-native.c  ext-perl.xs  ext-value.c  ext-value.h  ext.c  ext.h  gtk-chart-colors.c  gtk-chart-colors.h  gtk-chart-progress.c  gtk-chart-progress.h  gtk-chart.c  gtk-chart.h  gtk-dateentry.c  gtk-dateentry.h  hb-account.c  hb-account.h  hb-archive.c  hb-archive.h  hb-assign.c  hb-assign.h  hb-category.c  hb-category.h  hb-currency.c  hb-currency.h  hb-encoding.c  hb-encoding.h  hb-export.c  hb-export.h  hb-filter.c  hb-filter.h  hb-hbfile.c  hb-hbfile.h  (+89 more)
themes/hicolor/: Makefile.am
