SUBDIRS = images

helpdir   = $(datadir)/homebank/help
help_DATA = \
help.css \
00-intro.html \
00-lexicon.html \
00-whatsnew.html \
dlg-acco.html \
dlg-arch.html \
dlg-assi.html \
dlg-bud1.html \
dlg-cate.html \
dlg-filt.html \
dlg-paye.html \
dlg-pref.html \
dlg-spli.html \
dlg-tran.html \
dlg-wall.html \
frm-main.html \
frm-navig.html \
index.html \
misc-balance.html \
misc-csvformat.html \
misc-minor.html \
misc-reconcile.html \
use-auto_addition.html \
use-auto_assign.html \
use-budget.html \
use-import.html \
use-tipsandtricks.html \
use-vehiclecost.html \
win-account.html \
win-balance.html \
win-budget.html \
win-main.html \
win-statistics.html \
win-trendtime.html \
win-vehiclecost.html

EXTRA_DIST   = $(help_DATA)
