
imagesdir   = $(datadir)/homebank/help/images

images_DATA = \
03main_added.png \
03main_edited.png \
03main_reminded.png \
03main_validated.png \
05balance1.png \
05balance2.png \
05budget1.png \
05budget2.png \
05carcost1.png \
05statistics1.png \
05statistics2.png \
05trendtime1.png \
05trendtime2.png \
10.png \
11.png \
12.png \
13.png \
14.png \
15.png \
1.png \
2.png \
3.png \
45accfilter.png \
45topsending.png \
45txnsplit.png \
4.png \
5.png \
6.png \
7.png \
8.png \
9.png \
arrow.png \
dlg-account1.png \
dlg-assign1.png \
dlg-budget1.png \
dlg-category1.png \
dlg-filter1.png \
dlg-filter2.png \
dlg-filter3.png \
dlg-filter4.png \
dlg-filter5.png \
dlg-filter6.png \
dlg-payee1.png \
dlg-prefs1.png \
dlg-prefs2.png \
dlg-prefs3.png \
dlg-prefs4.png \
dlg-prefs5.png \
dlg-prefs6.png \
dlg-prefs7.png \
dlg-properties1.png \
dlg-split1.png \
dlg-template1.png \
dlg-transaction1.png \
doc_balance.png \
doc_title.png \
tnt-multiedit.png \
use-assignment1.png \
use-budget1.png \
use-budget2.png \
use-budget3.png \
use-import2a.png \
use-import2b.png \
use-import3.png \
use-import4a.png \
use-import4b.png \
use-import5.png \
use-scheduled1.png \
use-scheduled2.png \
use-vehiclecost1.png \
use-vehiclecost2.png \
use-vehiclecost3.png \
web_title.png \
win-account1.png \
win-main1.png 


EXTRA_DIST   = $(images_DATA)
